TP-3691: fix dfp ad wrapping issue

--- a/drupal/sites/all/themes/fresh/sass/modules/_tp_more_on_takepart.scss
+++ b/drupal/sites/all/themes/fresh/sass/modules/_tp_more_on_takepart.scss
@@ -33,7 +33,8 @@
   .tp-more__article {
     margin-bottom: 10px;
     padding: 0;
-    display: inline-block;
+    display: block;
+    float: left;
     @include breakpoint($breakpoint-phablet) {
       padding: 0 5px;
     }
